--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <header>
     Macrisoft pls 
     <span id="reset" class="pallette-black">Reset</span>
+    <span id="undo" class="pallette-black">UNDO</span>
     <a href="#red" id="red"><span class="pallette-red">Red</span></a>
     <a href="#green" id="green"><span class="pallette-green">Green</span></a>
     <a href="#blue" id="blue"><span class="pallette-blue">Blue</span></a>
