--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 <body>
   <header>
     Macrisoft pls 
-    <span id="reset" class="pallette-black">Reset</span>
-    <span id="undo" class="pallette-black">UNDO</span>
-    <a href="#red" id="red"><span class="pallette-red">Red</span></a>
-    <a href="#green" id="green"><span class="pallette-green">Green</span></a>
-    <a href="#blue" id="blue"><span class="pallette-blue">Blue</span></a>
-    <a href="#yellow" id="yellow"><span class="pallette-yellow">Yellow</span></a>
-    <a href="#white" id="white"><span class="pallette-white">White</span></a>
+    <span id="undo" class="pallette black">UNDO</span>
+    <a href="#red" id="red"><span class="pallette red"></span></a>
+    <a href="#green" id="green"><span class="pallette green"></span></a>
+    <a href="#blue" id="blue"><span class="pallette blue"></span></a>
+    <a href="#yellow" id="yellow"><span class="pallette yellow"></span></a>
+    <a href="#white" id="white"><span class="pallette white"></span></a> <span id="undo" class="pallette black">UNDO</span>
+    <a href="#red" id="red"><span class="pallette red"></span></a>
+    <a href="#green" id="green"><span class="pallette green"></span></a>
+    <a href="#blue" id="blue"><span class="pallette blue"></span></a>
+    <a href="#yellow" id="yellow"><span class="pallette yellow"></span></a>
+    <a href="#white" id="white"><span class="pallette white"></span></a>
   </header>
   <hr>
   <div>
