--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<title>Interface</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Interface</title>
+</head>
+<link rel="stylesheet" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 <body>
     <header>Macrisoft pls
